--- a/static/css/app.css
+++ b/static/css/app.css
@@ -14,6 +14,14 @@ img {
   width: 100%;
 }
 
+.alert {
+  position: fixed;
+  left: 50%;
+  top: 135px;
+  transform: translate(-50%, -50%);
+  z-index: 99999;
+}
+
 .tag > i.im {
   font-size: 1.5rem;
   margin-right: 0.5rem;
