--- a/templates/main.html
+++ b/templates/main.html
@@ -46,6 +46,7 @@
     {% endblock %}
 
     <script src="{% static 'uikit/app.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
 </body>
 
 </html>
