--- a/base/templates/base/projects.html
+++ b/base/templates/base/projects.html
@@ -9,11 +9,11 @@
             </div>
 
             <div class="hero-section__search">
-                <form class="form" action="{% url 'projects' %}" method="get">
+                <form id="search_form" class="form" action="{% url 'projects' %}" method="get">
                     <div class="form__field">
                         <label for="formInput#search">Search By Projects </label>
-                        <input class="input input--text" id="formInput#search" type="text" name="q"
-                            value="{{ q }}" placeholder="Search by Project Title" />
+                        <input class="input input--text" id="formInput#search" type="text" name="q" value="{{ q }}"
+                            placeholder="Search by Project Title" />
                     </div>
 
                     <input class="btn btn--sub btn--lg" type="submit" value="Search" />
@@ -29,10 +29,12 @@
                 <div class="column">
                     <div class="card project">
                         <a href="{% url 'single-project' project.id %}" class="project">
-                            <img class="project__thumbnail" src="{{ project.featured_image.url }}" alt="project thumbnail" />
+                            <img class="project__thumbnail" src="{{ project.featured_image.url }}"
+                                alt="project thumbnail" />
                             <div class="card__body">
                                 <h3 class="project__title">{{ project.title }}</h3>
-                                <p><a class="project__author" href="{% url 'user-profile' project.owner.id %}">By {{ project.owner.name }}</a></p>
+                                <p><a class="project__author" href="{% url 'user-profile' project.owner.id %}">By 
+                                    {{ project.owner.name }}</a></p>
                                 <p class="project--rating">
                                     <span style="font-weight: bold;">{{ project.pos_ratio }}</span> Postitive
                                     Feedback ({{ project.vote_total }} Vote{{ project.vote_total | pluralize:'s' }})
@@ -53,22 +55,8 @@
         </div>
     </section>
 
-    <div class="pagination">
-        <ul class="container">
-            <li><a href="#" class="btn btn--disabled">&#10094; Prev</a></li>
-            <li><a href="#" class="btn btn--sub">01</a></li>
-            <li><a href="#" class="btn">02</a></li>
-            <li><a href="#" class="btn">03</a></li>
-            <li><a href="#" class="btn">04</a></li>
-            <li><a href="#" class="btn">05</a></li>
-            <li><a href="#" class="btn">06</a></li>
-            <li><a href="#" class="btn">07</a></li>
-            <li><a href="#" class="btn">08</a></li>
-            <li><a href="#" class="btn">09</a></li>
-            <li><a href="#" class="btn">10</a></li>
-            <li><a href="#" class="btn">Next &#10095;</a></li>
-        </ul>
-    </div>
+    {% include 'pagination.html' with queryset=projects custom_range=custom_range %}
+
 </main>
 
 {% endblock %}
