--- a/base/templates/base/single-project.html
+++ b/base/templates/base/single-project.html
@@ -26,7 +26,7 @@
                 {% endif %}
             </div>
             <div class="column column--2of3">
-                <img class="singleProject__preview" src="{{ project.featured_image.url }}" alt="portfolio thumbnail" />
+                <img class="singleProject__preview" src="{{ project.imageURL }}" alt="portfolio thumbnail" />
                 <a href="{% url 'user-profile' project.owner.id %}" class="singleProject__developer">{{ project.owner }}</a>
                 <h2 class="singleProject__title">{{ project.title }}</h2>
                 <h3 class="singleProject__subtitle">About the Project</h3>
@@ -64,7 +64,7 @@
                         {% if review.body %}
                         <div class="comment">
                             <a href="{% url 'user-profile' review.owner.id %}">
-                                <img class="avatar avatar--md" src="{{ review.owner.profile_image.url }}" alt="user" />
+                                <img class="avatar avatar--md" src="{{ review.owner.imageURL }}" alt="user" />
                             </a>
                             <div class="comment__details">
                                 <a href="{% url 'user-profile' review.owner.id %}" class="comment__author">
