--- a/users/templates/users/login-register.html
+++ b/users/templates/users/login-register.html
@@ -20,7 +20,7 @@
             <div class="form__field">
                 <label for="formInput#text">Username: </label>
                 <input class="input input--text" id="formInput#text" type="text" name="username"
-                    placeholder="Enter your username..." />
+                    placeholder="Enter your username" />
             </div>
 
             <!-- Input:Password -->
