--- a/base/templates/base/projects.html
+++ b/base/templates/base/projects.html
@@ -35,10 +35,15 @@
                                 <h3 class="project__title">{{ project.title }}</h3>
                                 <p><a class="project__author" href="{% url 'user-profile' project.owner.id %}">By 
                                     {{ project.owner.name }}</a></p>
-                                <p class="project--rating">
+                                {% if project.short_intro %}
+                                <h5>{{ project.short_intro | slice:'60'}}</h5>
+                                {% else %}
+                                <h5>I am a lazy husky</h5>
+                                {% endif %}
+                                <!-- <p class="project--rating">
                                     <span style="font-weight: bold;">{{ project.pos_ratio }}</span> Postitive
                                     Feedback ({{ project.vote_total }} Vote{{ project.vote_total | pluralize:'s' }})
-                                </p>
+                                </p> -->
                                 <div class="project__tags">
                                     {% for tag in project.tags.all %}
                                     <span class="tag tag--pill tag--main">
