--- a/templates/main.html
+++ b/templates/main.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="{% static 'images/favicon.png' %}" type="image/x-icon" />
     <!-- Icon - IconMonster -->
     <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css" />
     <!-- Mumble UI -->
@@ -21,16 +21,6 @@
 
 <body>
     {% include 'navbar.html' %}
-
-    <!-- {% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-        <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>
-            {{ message }}
-        </li>
-        {% endfor %}
-    </ul>
-    {% endif %} -->
 
     {% if messages %}
     {% for message in messages %}
@@ -46,7 +36,17 @@
     {% endblock %}
 
     <script src="{% static 'uikit/app.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
     <script src="{% static 'js/main.js' %}"></script>
+    <script>
+        $(document).ready(function() {
+            // messages timeout for 4 sec 
+            setTimeout(function() {
+                $('.alert').fadeOut('slow');
+            }, 3000); // <-- time in milliseconds, 1000 =  1 sec
+        });
+    </script>
 </body>
 
 </html>
