--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -7,7 +7,7 @@
         <div class="container container--narrow">
             <div class="hero-section__box">
                 <h2>CONNECT WITH <span>DEVELOPERS</span></h2>
-                <h2>FROM AROUND THE WORLD</h2>
+                <h2>FROM UW CAMPUS</h2>
             </div>
 
             <div class="hero-section__search">
