Added remove tags

--- a/base/templates/base/project-form.html
+++ b/base/templates/base/project-form.html
@@ -20,7 +20,8 @@
                 <div class="form__field">
                     {% for tag in project.tags.all %}
                     <div class="project-tag tag tag--pill tag--main" data-tag="{{ tag.id }}"
-                        data-project="{{ project.id }}">{{ tag.name }} &#215;</div>
+                        data-project="{{ project.id }}">{{ tag.name }} &#215;
+                    </div>
                     {% endfor %}
                 </div>
 
