Cancel out comment

--- a/base/templates/base/single-project.html
+++ b/base/templates/base/single-project.html
@@ -34,7 +34,7 @@
                     {{ project.description }}
                 </div>
 
-                <div class="comments">
+                <!-- <div class="comments">
                     {% if request.user.profile.id == project.owner.id %}
                     <h3 class="singleProject__subtitle">Feedback</h3>
                     <h5 class="project--rating">
@@ -79,7 +79,7 @@
                         {% endif %}
                         {% endfor %}
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
